--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "kormsen.com",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -27,12 +28,16 @@
     "@radix-ui/react-aspect-ratio": "^0.1.0",
     "@radix-ui/react-icons": "^1.0.3",
     "@radix-ui/react-id": "^0.1.0",
+    "@radix-ui/react-label": "^0.1.0",
     "@radix-ui/react-progress": "^0.1.0",
     "@radix-ui/react-separator": "^0.1.0",
+    "@radix-ui/react-visually-hidden": "^0.1.0",
     "@stitches/react": "^1.2.0",
+    "motion": "^10.0.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.1",
     "stitches-mixins": "^1.0.0"
   },
   "devDependencies": {
