--- a/package.json
+++ b/package.json
@@ -33,8 +33,15 @@
     "@radix-ui/react-separator": "^0.1.0",
     "@radix-ui/react-visually-hidden": "^0.1.0",
     "@stitches/react": "^1.2.0",
+    "@types/p5": "^1.3.1",
+    "babel-plugin-styled-components": "^1.13.2",
+    "chroma-js": "^2.1.2",
+    "framer-motion": "^4.1.17",
+    "generative-design-library.js": "^0.1.2",
+    "long": "^4.0.0",
     "motion": "^10.0.1",
     "next": "latest",
+    "p5": "^1.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.1",
